--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "framer-motion": "^6.5.1",
+    "install": "^0.13.0",
+    "npm": "^9.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
+    "react-multi-carousel": "^2.8.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
