--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "BR5 Turbo",
+  "name": "Faça como 92% dos Empresários Bem Sucedidos, tenha Outras Fontes de Renda e venha fazer parte deste Grupo Seleto",
   "icons": [
     {
       "src": "favicon.ico",
